Adopt teammate's latest backend + frontend
Fully adopt the teammate's latest version (2 commits ahead) over the
locally-reworked fork. Their backend and frontend are self-consistent as
a pair, so this mirrors their src/main/java, static frontend, resources,
and pom wholesale rather than cherry-picking across the structural
divergence. Placed into this repo's split layout (backend/ + frontend/)
via the pom resource mapping so start.ps1 and repo conventions still work.

Brings in:
- Academic Progress AI (StudentAnalysis*, AcademicAdviceService,
  AcademicPredictionClient -> :8002 with rule-based fallback) + View
  Progress cards on academic pages
- Teacher/admin edit & delete for health and academic records with
  real range/payload validation
- Full-page Help chatbot (parent/teacher/admin help.html) + expanded
  CHATBOT_INTENTS coverage
- Admin account-deletion fixes (drop legacy singular classroom table,
  auto-unlink soft-deleted children, block teacher owning a classroom)
- Email-casing normalization across register/login/forgot-password
- Parent-home fee check across all children; admin dashboard classroom
  card link; removed dead teacher-header buttons; UX polish (favicon,
  password toggles, login help/contact, PDF export)

Consequences of full adoption (were previously in the local fork, now
removed to match the teammate):
- Auth reorganized: RestAuthController + AuthRequest/AuthResponse; the
  self-issued-JWT security/ package and *DTO classes are dropped
- SecurityConfig permits /api/** (session/form-login, no Bearer filter),
  so components/auth-fetch.js and the 4 backend tests are removed
- pom -> Spring Boot 3.2.5 / Java 17; Lombok bumped to 1.18.42 (the only
  deviation) so it compiles on this machine's JDK 24

Verified: compiles and boots on JDK 24, DB connects, migrations idempotent,
/login.html + new help pages + favicon serve 200 from frontend/.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>